Add website for user-model interaction

--- a/notebooks/03_model_training.ipynb
+++ b/notebooks/03_model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "366ea21e",
    "metadata": {},
    "outputs": [],
@@ -14,6 +14,7 @@
     "from pathlib import Path\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "PROJECT_ROOT = Path.cwd().parent\n",
     "if str(PROJECT_ROOT) not in sys.path:\n",
     "    sys.path.append(str(PROJECT_ROOT))\n",
     "\n",
@@ -22,6 +23,155 @@
     "DATA_PATH = PROJECT_ROOT / \"data\" / \"processed\" / \"labeled_nasa_data.csv\"\n",
     "MODELS_PATH = PROJECT_ROOT / \"models\"\n",
     "MODELS_PATH.mkdir(exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "022c4163",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set: 1430 items\n",
+      "Test set: 358 items\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(DATA_PATH)\n",
+    "\n",
+    "df = df.dropna(subset=['explanation', 'label'])\n",
+    "\n",
+    "X = df['explanation']\n",
+    "y = df['label']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "\n",
+    "print(f\"Training set: {len(X_train)} items\")\n",
+    "print(f\"Test set: {len(X_test)} items\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "45969a78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training NB model...\n",
+      "Training complete.\n",
+      "Naive Bayes Accuracy: 0.7709\n",
+      "\n",
+      "Classification Report:\n",
+      "\n",
+      "                precision    recall  f1-score   support\n",
+      "\n",
+      "Asteroid_Comet       1.00      0.19      0.31        27\n",
+      "        Galaxy       0.84      0.86      0.85        79\n",
+      "        Nebula       0.82      0.97      0.89        86\n",
+      "        Planet       0.68      0.99      0.81        96\n",
+      "          Star       0.78      0.36      0.49        70\n",
+      "\n",
+      "      accuracy                           0.77       358\n",
+      "     macro avg       0.83      0.67      0.67       358\n",
+      "  weighted avg       0.79      0.77      0.74       358\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# experiment 1\n",
+    "nb_model = SpaceClassifier(model_type='nb')\n",
+    "\n",
+    "nb_model.train(X_train, y_train)\n",
+    "\n",
+    "acc_nb, report_nb = nb_model.evaluate(X_test, y_test)\n",
+    "\n",
+    "print(f\"Naive Bayes Accuracy: {acc_nb:.4f}\")\n",
+    "print(\"\\nClassification Report:\\n\")\n",
+    "print(report_nb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "491dafc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training LOGREG model...\n",
+      "Training complete.\n",
+      "Logistic Regression Accuracy: 0.8547\n",
+      "\n",
+      "Classification Report:\n",
+      "\n",
+      "                precision    recall  f1-score   support\n",
+      "\n",
+      "Asteroid_Comet       0.60      0.78      0.68        27\n",
+      "        Galaxy       0.88      0.89      0.88        79\n",
+      "        Nebula       0.93      0.87      0.90        86\n",
+      "        Planet       0.91      0.93      0.92        96\n",
+      "          Star       0.80      0.73      0.76        70\n",
+      "\n",
+      "      accuracy                           0.85       358\n",
+      "     macro avg       0.82      0.84      0.83       358\n",
+      "  weighted avg       0.86      0.85      0.86       358\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# experiment 2\n",
+    "lr_model = SpaceClassifier(model_type='logreg')\n",
+    "\n",
+    "lr_model.train(X_train, y_train)\n",
+    "\n",
+    "acc_lr, report_lr = lr_model.evaluate(X_test, y_test)\n",
+    "\n",
+    "print(f\"Logistic Regression Accuracy: {acc_lr:.4f}\")\n",
+    "print(\"\\nClassification Report:\\n\")\n",
+    "print(report_lr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1c1c62ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive Bayes: 0.7709\n",
+      "Logistic Regression: 0.8547\n",
+      "Model saved to c:\\Users\\samol\\Desktop\\space_objects_recognition\\models\\space_model_v1.pkl\n",
+      "✅ Model saved to: c:\\Users\\samol\\Desktop\\space_objects_recognition\\models\\space_model_v1.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Naive Bayes: {acc_nb:.4f}\")\n",
+    "print(f\"Logistic Regression: {acc_lr:.4f}\")\n",
+    "\n",
+    "if acc_lr > acc_nb:\n",
+    "    best_model = lr_model\n",
+    "else:\n",
+    "    best_model = nb_model\n",
+    "\n",
+    "save_path = MODELS_PATH / \"space_model_v1.pkl\"\n",
+    "best_model.save(save_path)\n",
+    "\n",
+    "print(f\"✅ Model saved to: {save_path}\")"
    ]
   }
  ],
@@ -32,7 +182,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.9"
   }
  },
